# JniHttp

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniUtils.cpp  JniUtils.h  native-lib.cpp  web_task.cpp  web_task.h
app/src/main/java/com/ldlywt/jnihttp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
